# SweepRobot

./: .gitignore  CMakeLists.txt  README.md  build.sh
Examples/Monocular/: mono_test.cc  test.yaml
Examples/Stereo/: stereo_odo_robot.cc
Examples/Stereo/unused/: realtime_stereo_odo.cc  ros_stereo_odo_serial.cc  stereo_euroc.cc  stereo_kitti.cc
Examples/detection/: carpet_detection.cpp  main_direction_detecton.cpp  object_detector.cpp  obstacle_detector.cpp  sweeper_detection.cpp
Examples/sweep_robot/: sweep_robot.cc
cmake/: pangolin.cmake  pcl.cmake
config/config_on_rv1126/initial/: main_direction_detector.yaml  object_detector.yaml  obstacle_detector.yaml  robot_labels_list_5.txt  robot_orb_stereo.yaml  robot_orb_stereo_new.yaml  robot_orb_stereo_new_1_7.yaml  sweeper_config.yaml  yolo_self_onnx.rknn
config/gt/: vicon_01.txt  vicon_02.txt  vicon_03.txt  vicon_04.txt  vicon_05.txt  vicon_06.txt  vicon_07.txt  vicon_10.txt
config/robot/: cali.txt  cam0_pinhole.yaml  cam1_pinhole.yaml  carpet_detector.yaml  main_direction_detector.yaml  object_detector.yaml  obstacle_detector.yaml  obstacle_detector_backup.yaml  robot_orb_stereo.yaml  robot_orb_stereo_new.yaml  sweeper_config.yaml  sweeper_detector.yaml
data/: biasCompare.mlx
evaluation/: __init__.py  eval.sh  eval_self.py  generate_dataset.py  script.py
evaluation/liegroups/: acc.txt
evaluation/liegroups/docs/source/: conf.py
evaluation/liegroups/liegroups/: __init__.py  _base.py
evaluation/liegroups/liegroups/numpy/: _base.py  so2.py  so3.py
evaluation/liegroups/liegroups/torch/: _base.py  se2.py  se3.py  so2.py  so3.py  utils.py
evaluation/liegroups/tests/numpy/: test_so2_numpy.py  test_so3_numpy.py
evaluation/liegroups/tests/torch/: test_se2_torch.py  test_se3_torch.py  test_so2_torch.py  test_so3_torch.py  test_utils_torch.py
evaluation/main_direction_detection_result/: main_direction_gt.txt
evaluation/object_det_eval/: eval.py  obs_eval.py
evaluation/util/: __init__.py  align.py  associate.py  metric.py  plot_self.py
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
include/Util/: FileUtil.h  Random.h  RotUtil.h  dataloader.h  parameters.h  record.h  se3_util.hpp  selfDefine.h
include/detection/: VPDetection.h  bbox.h  box3d.h  carpet_detector.h  detector.h  main_direction_detector.h  obj_det_utils.h  yolo_opencv.h
include/detection/yolov5/: postprocess.h
include/orb_slam3/: Atlas.h  Converter.h  Frame.h  G2oTypes.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  PnPsolver.h  RealTime.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
include/preintegration/: ImuTypes.h  Odometer.h  imuProcess.h
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
src/Util/: FileUtil.cpp  Random.cpp  RotUtil.cpp  Timestamp.cpp  dataloader.cpp  record.cpp
src/detection/: VPDetection.cpp  bbox.cpp  box3d.cpp  carpet_detector.cpp  detector.cpp  main_direction_detector.cpp  obj_det_utils.cpp  yolo_opencv.cpp
src/detection/yolov5/: postprocess.cc
src/orb_slam3/: Atlas.cc  Converter.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  PnPsolver.cc  RealTime.cpp  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
src/preintegration/: ImuTypes.cc  Odometer.cpp  imuProcess.cpp  parameters.cpp
